--- a/src/app/features/character/component/extra-info/extra-info.component.html
+++ b/src/app/features/character/component/extra-info/extra-info.component.html
@@ -3,7 +3,7 @@
 <!-- 条件が偽の時には「Create」と表示される -->
 <ng-template #skills>
     <ng-container *ngIf="skill == 'normal'">
-        <mat-form-field appearance="legacy" floatLabel="always">
+        <mat-form-field appearance="fill" floatLabel="always">
             <mat-label [innerText]="'GENSHIN.OTHER.OVERRIDE_ELEMENT' | translate"></mat-label>
             <mat-select [ngModel]="overrideElement" (ngModelChange)="onChangeElement($event)">
                 <mat-option></mat-option>
