--- a/src/app/features/character/component/weapon/weapon.component.html
+++ b/src/app/features/character/component/weapon/weapon.component.html
@@ -33,7 +33,7 @@
                     </mat-panel-description>
                 </mat-expansion-panel-header>
                 <!-- レベル選択 -->
-                <mat-form-field appearance="legacy" floatLabel="always">
+                <mat-form-field appearance="fill" floatLabel="always">
                     <mat-label [innerText]="'PROPS.LEVEL' | translate"></mat-label>
                     <mat-select [(ngModel)]="selectedLevel" (ngModelChange)="onChangeLevel($event)">
                         <ng-container *ngFor="let option of levelOptions">
@@ -82,7 +82,7 @@
                         </mat-panel-description>
                     </mat-expansion-panel-header>
                     <!-- レベル選択 -->
-                    <mat-form-field appearance="legacy" floatLabel="always">
+                    <mat-form-field appearance="fill" floatLabel="always">
                         <mat-label [innerText]="'PROPS.LEVEL' | translate"></mat-label>
                         <mat-select [(ngModel)]="selectedSmeltingLevel" (ngModelChange)="onChangeSmeltingLevel($event)">
                             <ng-container *ngFor="let level of smeltingLevelOptions; index as i">
