--- a/src/app/features/character/component/character/character.component.html
+++ b/src/app/features/character/component/character/character.component.html
@@ -20,7 +20,7 @@
                     </mat-panel-description>
                 </mat-expansion-panel-header>
                 <!-- レベル選択 -->
-                <mat-form-field appearance="legacy" floatLabel="always">
+                <mat-form-field appearance="fill" floatLabel="always">
                     <mat-label [innerText]="'PROPS.LEVEL' | translate"></mat-label>
                     <mat-select [(ngModel)]="selectedLevel" (ngModelChange)="onChangeLevel($event)">
                         <ng-container *ngFor="let option of levelOptions">
