--- a/src/app/shared/component/extra-data/extra-data.component.css
+++ b/src/app/shared/component/extra-data/extra-data.component.css
@@ -82,6 +82,12 @@ table {
     height: 500px;
 }
 
+.calc-process-echarts {
+    padding-top: 6px;
+    padding-bottom: 6px;
+    height: 270px;
+}
+
 .float-add {
     float: right;
 }
