--- a/src/app/features/homePage/component/main/main.component.html
+++ b/src/app/features/homePage/component/main/main.component.html
@@ -1,6 +1,19 @@
 <div class="main">
-    <div class="background" *ngIf="backgroundURL" [style.background-image]="'url(' + backgroundURL + ')'" [@imgLoad]="imgState">
+    <div class="background" [style.right]="'0px'" *ngIf="backgroundURL" [style.background-image]="'url(' + backgroundURL + ')'" [@imgLoad]="imgState">
         <div class="background"></div>
+    </div>
+    <div *ngIf="showLoadStatus" [@otherLoad]="otherState" class="status-div">
+        <div>
+            <span class="download-files-title-span">
+                {{ 'SYS_INIT.JSON.DOWNLOAD_TITLE' | translate}}
+            </span>
+        </div>
+        <div *ngFor="let statusObj of jsonDownloadStatus | keyvalue">
+            <span class="download-file-span">
+                {{ 'SYS_INIT.JSON.' + statusObj.key | translate }}
+            </span>
+            <mat-progress-bar class="download-process-bar" mode="buffer" [value]="statusObj.value"></mat-progress-bar>
+        </div>
     </div>
     <div class="container-buttons">
         <div>
