--- a/src/app/features/homePage/component/main/main.component.css
+++ b/src/app/features/homePage/component/main/main.component.css
@@ -5,6 +5,8 @@
     /* background-size: cover; */
     /* opacity: 0.3; */
     /* color: #fff; */
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .content {
@@ -12,27 +14,14 @@
 }
 
 .background {
-    position: absolute;
+    position: fixed;
     background-position: top 0% right 0%;
-    background-size: contain;
+    background-size: auto 100%;
     background-repeat: no-repeat;
     filter: blur(0.35px);
     z-index: -10;
     min-height: 100%;
     width: 100%;
-}
-
-@media screen and (max-aspect-ratio: 13/9) {
-    .background {
-        position: absolute;
-        background-position: top 0% right 0%;
-        background-size: cover;
-        background-repeat: no-repeat;
-        filter: blur(0.35px);
-        z-index: -10;
-        min-height: 100%;
-        width: 100%;
-    }
 }
 
 .background-content {
@@ -67,4 +56,50 @@
 
 .align-icon {
     margin-top: -2px;
+}
+
+.status-div {
+    max-width: 350px;
+    min-width: 290px;
+    margin: 12px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 8px 0px;
+    background: #f5f5f5c1;
+    border-radius: 10px;
+    animation: changeColor 1.5s infinite normal;
+}
+
+@keyframes changeColor {
+    0% {
+        margin-left: 17px;
+        box-shadow: 1px 1px 1px rgba(128, 128, 128, 0.3);
+        width: 300px;
+    }
+    50% {
+        margin-left: 12px;
+        box-shadow: 1px 1px 1px rgba(255, 255, 255, 0.3);
+        width: 320px;
+    }
+    100% {
+        margin-left: 17px;
+        box-shadow: 1px 1px 1px rgba(128, 128, 128, 0.3);
+        width: 300px;
+    }
+}
+
+.download-files-title-span {
+    font-size: large;
+    font-weight: 700;
+}
+
+.download-file-span {
+    font-weight: 400;
+}
+
+.download-process-bar {
+    width: 100%;
 }
