--- a/src/app/root/main/main.component.html
+++ b/src/app/root/main/main.component.html
@@ -17,7 +17,7 @@
       <app-menu class="menu" (menuClickEvent)="closeMenu($event)"></app-menu>
     </mat-sidenav>
     <mat-sidenav-content class="sidenav-content">
-      <div [id]="captureElementID" class="outlet" [@routeAnimations]="prepareRoute(outlet)">
+      <div [id]="captureElementID" class="outlet" [@routeAnimations]="prepareRoute(outlet) | async">
         <router-outlet #outlet="outlet">
           <!-- <app-paste-event-listener
             (pastedImage)="addPastedImage($event)"
