--- a/src/app/shared/component/loading-overlay/loading-overlay.component.html
+++ b/src/app/shared/component/loading-overlay/loading-overlay.component.html
@@ -1,3 +1,3 @@
 <div class="loading">
-    <mat-spinner></mat-spinner>
+    <mat-progress-spinner [value]="(value | async)!"></mat-progress-spinner>
 </div>
