Remove Enka UID check

--- a/src/app/shared/component/enka/enka.component.html
+++ b/src/app/shared/component/enka/enka.component.html
@@ -1,6 +1,6 @@
 <div class="enka">
     <mat-form-field class="enka-field enka-input" appearance="fill">
-        <input matInput [formControl]="uid" placeholder="UID" maxlength="9" minlength="9" (keypress)="($event.charCode >= 48 && $event.charCode < 58)">
+        <input matInput [formControl]="uid" placeholder="UID">
     </mat-form-field>
     <button mat-icon-button class="icon-button" (click)="onClick()">
         <div class="shinshinmoe-container">
